# GarmentCode

./: .gitignore  CHANGELOG  CHANGELOG.md  LICENSE  ReadMe.md  ReadMe_notes.md  closest_body.py  datasim.py  datasim_runner.sh  design_params_reload.py  dev_nicegui_3d.py  environment.yml  garment_gen_sim.py  garment_refitting.py  garment_sampler.py  gather_renders.py  gui.py  pattern_data_sim.py  pattern_data_sim_runner.sh  pattern_fitter.py  pattern_sampler.py  requirements.txt  setup.cfg  skirt_paneled.py  stats_utils.py  svg_holes.py  system.template.json  test_garment_sim.py  test_garmentcode.py  test_garmentcode_params.py  test_garments.py
assets/Bodies/: Readme.md  body_params.py  f_smpl_average_A40.yaml  f_smpl_model_full_bodied.yaml  f_smpl_thin.yaml  m_smpl_average_A40.yaml  mean_all.stl  mean_all.yaml  sofia_001.ply  sofia_002.ply
assets/GarmentCode/: bands.py  bodice.py  collars.py  godet.py  meta_garment.py  options.yaml  options_body.yaml  options_design.yaml  pants.py  skirt_paneled.py  sleeves.py  tee.py
assets/Patterns/: dress_pencil_top_position_specification.json  flare_skirt_specification.json  hoody_mean_specification.json  js_mean_all_specification.json  shirt_mean_specification.json  standing_lapel_fix_specification.json  standing_lapel_specification.json  to_waist_levels_circle2_specification.json
assets/Scenes/: matplotlib_install_run_as_admin.blend
assets/Sim_props/: default_sim_props.yaml  gui_sim_props.yaml  mid_bending.yaml  minimal_bending.yaml  rubber_soft_ochra.json  rubber_stiff_ochra.json  soft_flexy_ochra 30s.json  soft_ochra 20s.json  soft_ochra.json  soft_ochra_JS.json  soft_ochra_JS_new.json  soft_ochra_mid_stiffness.json  stiff_ochra.json  stiff_ochra_30s.json  stiff_ochra_40s.json  stiff_ochra_50s.json  stiff_ochra_mid.json  stiff_ochra_sleevelss_drape.json  warp_default_sim_props.yaml
assets/bodies/: body_params.py  ggg_body_segmentation.json  mean_all_tpose.yaml
assets/body_measurments/: body_params.py  f_avatar.yaml  f_smpl_avg.yaml  f_smpl_fluffy.yaml  (+10 more)
docs/: Installation.md  Library.md  Running.md  Running_Maya_Qualoth.md  Running_data_generation.md  Running_garmentcode.md
gui/: cairo_svg.py  callbacks.py  callbacks_psg.py  error_pages.py  gui.py  gui_pattern.py  image_overlay_test.py  maya_garmentviewer.py
post_processing_scripts/: align_bodies.py  gather_renders.py
pygarment/: __init__.py  base.py  component.py  connector.py  customconfig.py  data_config.py  edge.py  edge_factory.py  flags.py  generic_utils.py  interface.py  operators.py  panel.py  params.py
pypattern/: ___init___.py  __init__.py  _generic_utils.py  base.py  component.py  connector.py  edge.py  edge_factory.py  flags.py  generic_utils.py  interface.py  operators.py  panel.py  params.py
tests/: sampler_test.py
tiny_dev_scripts/: bezier_bounding_box.py  blender_clear_scene.py  blender_pattern_render.py  curve_extrema_fit.py  curve_invertion.py  maya_pattern_render.py  scripts_bezier.py  scripts_svgpathtools.py  shapes.py  svg_holes.py
utility scripts/: darts_dev.py
(+160 files in other folders)
