[metadata]
name = pygarment
version = 1.0.0
author = Maria Korosteleva
author_email = maria.korosteleva.public@gmail.com
description = A modular programming framework for designing parametric sewing patterns
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/maria-korosteleva/GarmentCode
project_urls =
    Bug_Tracker = https://github.com/maria-korosteleva/GarmentCode/issues
    repository = https://github.com/maria-korosteleva/GarmentCode
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
#package_dir = ./
packages = pygarment, external/mayaqltools, external/pattern
python_requires = >=3.6
install_requires = 
    numpy
    scipy
    pyaml
    svgwrite
    psutil
    matplotlib
    cairoSVG
    PySimpleGUI
    wmi;platform_system=='Windows'