[metadata]
name = pygarment
version = 2.0.0
author = Maria Korosteleva
author_email = maria.korosteleva.public@gmail.com
description = A modular programming framework for designing parametric sewing patterns
long_description = file: README.md, CHANGELOG, LICENSE
long_description_content_type = text/markdown
keywords = garment-programming, garment-modeling, sewing-patterns
url = https://igl.ethz.ch/projects/garmentcode/
project_urls =
    Bug_Tracker = https://github.com/maria-korosteleva/GarmentCode/issues
    repository = https://github.com/maria-korosteleva/GarmentCode
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir=
    =pygarment
packages=find:
python_requires = >=3.6
install_requires = 
    pyyaml>=6.0
    numpy
    scipy
    svgwrite
    svgpathtools
    psutil
    matplotlib
    CairoSVG
    nicegui
    wmi;platform_system=='Windows'

[options.packages.find]
where=pygarment